MINOR: fixed some alignments
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@69685 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/layout.css
+++ b/css/layout.css
@@ -530,6 +530,9 @@ iframe {
 }
 
 /* IMAGE ALIGNMENT in the right panel */
+#ImageAlignmentStyles_Wrapper {
+	padding-left: 3px;
+}
 #ImageAligmentStyle {
 	clear: both;
 	padding-top: 8px;
@@ -538,6 +541,8 @@ iframe {
 	#ImageAligmentStyle label{
 		display: block;
 		color: #666666;
+		font-size: 11px;
+		line-height: 18px;
 	}
 	#ImageAligmentStyle a {
 		float: left;
